--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/base.css') }}">
-</head>
-<body>
+{% include 'base.html' %}
 
 <h1>Hello bro</h1>
-
-</body>
-</html>
